# rkv

./: Cargo.toml  LICENSE.txt  README.md  build.rs
proto/: config.proto  net_service.proto  node.proto  peer_service.proto  rkv_service.proto  storage_service.proto
src/: error.rs  lib.rs
src/ring/: hash_ring.rs  mod.rs
src/server/: error.rs  mod.rs  server.rs  service.rs
src/store/: mem.rs  mod.rs
tests/: integ_test.rs
