[package]
name = "rkv"
version = "0.1.0"
authors = ["Alex Steele <steeleal123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
quick-error = "2.0"
tonic = "0.3"
prost = "0.6"
stderrlog = "0.5"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
tonic-build = "0.3"
